---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: codegen_output
---
Fixture: simple_call.cm
============================================================
Source code:
fn helper() -> felt {
    return 42;
}

fn main() -> felt {
    return helper();
}

============================================================
Generated CASM:
helper:
   0: 9 42 -3 _            // Return value 0: [fp -3] = 42
   1: 11 _ _ _             // return
main:
   2: 10 2 0 _             // call helper
   3: 4 1 0 -3             // Return value 0: [fp -3] = [fp + 1] + 0
main:
   4: 11 _ _ _             // return
